updated author email

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 Drive Map Core Team (in alphabetical order):
 
-* Corey Farmer <corey.farmer@emerus.com> (project leader - lead developer)
+* Corey Farmer <corey.m.farmer@gmail.com> (project leader - lead developer)
